# py-safestats

./: Dockerfile.rtests  README.md  pyproject.toml
scripts/: run_r_test
src/: proportion_test.py  ttest.py
tests/: conftest.py  test_ttest.py
